# AISysAdm

./: .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  architecture.md  compose.integration.yaml  compose.yaml  package-lock.json  package.json  tsconfig.base.json
agents/: linux-state.md  log-analysis.md  orchestrator.md
apps/api/: pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_private_alpha.py  0002_campaign_host_plans.py  0003_durable_job_execution.py  0004_user_roles.py  0005_rollback_snapshots.py
apps/api/sysadmin_api/: __init__.py  agents.py  authorization.py  collector.py  config.py  contracts.py  credentials.py  database.py  executor.py  main.py  memory.py  models.py  providers.py  queue.py  redaction.py  repository.py  runtime.py  security.py  service.py  snapshots.py  ssh_utils.py  tasks.py  trusted_change.py  verifier.py
apps/api/tests/: conftest.py  test_api.py  test_auth_sessions.py  test_campaign_api.py  test_campaign_workflow.py  test_repository.py  test_safety_contracts.py  test_security_controls.py  test_snapshot_workflow.py  test_trusted_change.py  test_worker_execution.py  test_workflow.py
apps/api/tests/integration/: conftest.py  test_campaign_concurrency.py  test_durable_job_concurrency.py  test_infrastructure.py  test_real_host_workflows.py
apps/api/tests/integration/fixtures/ansible_playbooks/: full-upgrade.yml  post-patch-validation.yml  pre-patch-check.yml  reboot-required-check.yml  reboot.yml  recovery-diagnostics.yml  refresh-package-metadata.yml  security-upgrade.yml
apps/web/: index.html  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/: App.test.tsx  App.tsx  api.ts  styles.css
docs/: frontend-campaign-contract.md  real-host-integration.md  threat-model.md
ops/ansible/: collect-diagnostics.yml
ops/ansible/callback_plugins/: ai_jsonl.py
ops/ansible/playbooks/: full-upgrade.yml  (+7 more)
scripts/: integration.sh
(+10 files in other folders)
