[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sysadm-api"
version = "0.2.0"
description = "Approval-gated AI control plane for Linux patching"
license = "AGPL-3.0-only"
requires-python = ">=3.9"
dependencies = [
  "alembic>=1.14,<2",
  "argon2-cffi>=23.1,<26",
  "celery>=5.4,<6",
  "cryptography>=43,<46",
  "croniter>=3.0,<7",
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.5,<3",
  "python-multipart>=0.0.12,<1",
  "redis>=5.1,<6",
  "sqlalchemy>=2.0,<3",
  "psycopg[binary]>=3.2,<4",
  "uvicorn[standard]>=0.32,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.24,<1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires the PostgreSQL and Redis integration stack",
  "real_host: requires disposable SSH targets from the real-host integration stack",
  "ansible: requires ansible-playbook and disposable SSH targets",
]

[tool.setuptools.packages.find]
include = ["sysadmin_api*"]
